<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:elevation="8dp"
            android:background="@drawable/card_bg"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvEventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/secondaryText" />

            <TextView
                android:id="@+id/tvEventDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date_time"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvEventVenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_venue"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:layout_marginBottom="16dp" />

            <ImageView
                android:id="@+id/mapViewContainer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/project_location"
                android:src="@drawable/grampanchayatkaryalay"
                android:scaleType="centerCrop"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvEventAgenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_agenda"
                android:textSize="16sp"
                android:textColor="@color/tertiaryText"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp" />

            <TextView
                android:id="@+id/tvEventOrganizers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_organizers"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvEventContactInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_contact_info"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="16sp"
                android:backgroundTint="@color/buttonPrimary"
                android:textColor="#FFFFFF"
                android:padding="14dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />
        </LinearLayout>
    </ScrollView>
